external-crates/move/crates/move-compiler/tests/move_2024/typing/index_syntax_methods_unsupported.exp
error[E02019]: invalid 'syntax' method type
   ┌─ tests/move_2024/typing/index_syntax_methods_unsupported.move:29:14
   │
29 │     #[syntax(for)]
   │              ^^^ Invalid syntax annotation. This syntax method must return a unit type
30 │     public macro fun for_s(s: &S, i: u64): &u64 {
   │                                            ---- This is not a unit type

error[E02010]: invalid name
   ┌─ tests/move_2024/typing/index_syntax_methods_unsupported.move:30:28
   │
30 │     public macro fun for_s(s: &S, i: u64): &u64 {
   │            -----           ^ Invalid parameter name 's'. 'macro' parameter names must start with '$' (or must be '_')
   │            │                
   │            Declared 'macro' here
   │
   = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.

error[E02010]: invalid name
   ┌─ tests/move_2024/typing/index_syntax_methods_unsupported.move:30:35
   │
30 │     public macro fun for_s(s: &S, i: u64): &u64 {
   │            -----                  ^ Invalid parameter name 'i'. 'macro' parameter names must start with '$' (or must be '_')
   │            │                       
   │            Declared 'macro' here
   │
   = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.

error[E02015]: invalid attribute
   ┌─ tests/move_2024/typing/index_syntax_methods_unsupported.move:34:14
   │
34 │     #[syntax(assign)]
   │              ^^^^^^ 'assign' syntax attributes are not currently supported

error[E02015]: invalid attribute
   ┌─ tests/move_2024/typing/index_syntax_methods_unsupported.move:39:14
   │
39 │     #[syntax(nonsense)]
   │              ^^^^^^^^ Invalid syntax method identifier 'nonsense'

